--- a/index.html
+++ b/index.html
@@ -186,13 +186,11 @@ p code
 
 <div class="content">
 
-<h1>Master of All: Simultaneous Generalization of Urban-Scene Segmentation to All Adverse Weather Conditions</h1>
+<h1>Domain Generalizing DINO for Visual Regression via Latent Distractor Subspace Consistency</h1>
 <p id="authors">
 <a href=mailto:nikhil.jangamreddy@uqidar.iitd.ac.in>Nikhil Reddy</a><sup>a,b</sup> 
-<a href="">Abhinav Singhal</a><sup>a </sup> 
-<a href="">Abhishek kumar</a><sup>a </sup> 
+<a href="">Chetan Arora</a><sup>a </sup> 
 <a href="">Mahsa Baktashmotlagh</a><sup>b </sup> 
-<a href="https://www.cse.iitd.ac.in/~chetan/">Chetan Arora</a><sup>a </sup> 
 <br>
 <br>
 <sup> a </sup> Indian Institute of Technology, Delhi <br>
@@ -200,13 +198,13 @@ p code
 </p>
 
 <div class="downloadpaper">
-<a href="./mall-iitd/architechture.jpg"><img src="./mall-iitd/architechture.jpg" width="400px" border="2"></a>
+<a href="./mall-iitd/architechture.jpg"><img src="architechture.jpg" width="400px" border="2"></a>
 </div>
 
-<p>Computer vision systems for autonomous navigation must generalize well in adverse weather and illumination conditions expected in the real world. However, semantic segmentation of images captured in such conditions remains a challenging task for current state-of-theart (SOTA) methods trained on broad daylight images, due to the associated distribution shift. On the other hand, domain adaptation techniques developed for the purpose rely on the availability of the source data, (un)labeled target data and/or its auxiliary information (e.g., GPS). Even then, they typically adapt to a single(specific) target domain(s). To remedy this, we propose a novel, fully test time, adaptation technique, named Master of ALL (MALL), for simultaneous generalization to multiple target domains. MALL learns to generalize on unseen adverse weather images from multiple target domains directly at the inference time. More specifically, given a pre-trained model and its parameters, MALL enforces edge consistency prior at the inference stage and updates the model based on (a) a single test sample at a time (MALL-sample), or (b) continuously for the whole test domain (MALL-domain). Not only the target data, MALL also does not need access to the source data and thus, can be used with any pre-trained model. Using a simple model pre-trained on daylight images, MALL outperforms specially designed adverse weather semantic segmentation methods, both in domain generalization and testtime adaptation settings. Our experiments on foggy, snow, night, cloudy, overcast, and rainy conditions demonstrate the target domain-agnostic effectiveness of our approach. We further show that MALL can improve the performance of a model on an adverse weather condition, even when the model is already pre-trained for the specific condition.
+<p>Vision Foundation Models, such as \dino~\cite{Dinov2}, have demonstrated remarkable generalization in classification; however, their application to out-of-domain visual regression tasks remains a significant and underexplored challenge. Unlike classification, domain generalization in regression poses distinct challenges: regression produces continuous outputs and is particularly sensitive to high-variance, label-irrelevant factors (e.g., illumination, blur, or contrast). These factors can entangle with task-relevant features and induce spurious correlations. While recent regression methods~\cite{c-mixup,ranksim,circe,fds,conr} have shown promise, they often rely on CNN backbones and require the pre-specification of known distractors. This demands significant domain expertise and fails to address spurious correlations that emerge during training. To address these challenges, we propose \proposedapproach, a \textbf{L}atent \textbf{D}istractor \textbf{S}ubspace \textbf{C}onsistency framework that disentangles intermediate feature representation into task-relevant and latent distractor subspaces, and regularizes the latter under photometric perturbations to suppress spurious correlations while preserving discriminative features during training. Our proposed method, \proposedapproach, is the first to effectively adapt the powerful \dino backbone for domain generalized visual regression. \proposedapproach achieves state-of-the-art results on seven benchmark regression datasets, demonstrating its strong performance in domain generalization for visual regression with percentage improvements of (41.75\%, 20.12\%, 52.05\%, 8.27\%, 22.21\%, 3.55\%) over state-of-the-art \DG regression methods, respectively. 
 </p>
 
-<p><a href="./mall-iitd/4043.pdf" target="_blank">Paper</a> &nbsp;&nbsp;&nbsp;&nbsp; <a href="./mall-iitd/4043-supp.pdf" target="_blank">Supplementary</a></p>
+<p><a href=.pdf" target="_blank">Paper</a></a></p>
 
 
 <br clear="all">
